# muse-stream

./: .env  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt
core/: csv_to_h5.py  data_loader.py  stream.py
notebooks/: example.ipynb
